made arraylists instead of arrays to make it more flexible